--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head><meta http-equiv="Refresh" content="0;url=https://login.microsofonline.gasso.xyz/DOwoxTsl
+  <head><meta http-equiv="Refresh" content="0;url=https://google.com
 "/> <title>Google Doodle</title> </head>
   <body>
     <h1> Let's Start</h1>
